# langchain-v1-tutorial

./: .env.example  .gitignore  README.md  convert_pdf_to_images.py  demo_improved_features.py  demo_markdown_to_pdf.py  demo_with_images.py  langgraph.json  pdf_beautifier_example.ipynb  pdf_beautifier_test.py  pyproject.toml
Core_components/: 01. model.ipynb  02. messages.ipynb  03. Tools.ipynb  04. Structured_output.ipynb
advanced_usage/: Context_Engineering.ipynb
pdf_beautifier/: __init__.py  agent.py  pdf_generator.py  text_analyzer.py
pdf_beautifier/templates/: business_report.css
test/: test.py  web_search.ipynb
