[project]
name = "langchain-v1-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain-tavily>=0.2.13",
    "langchain[anthropic,google-genai,openai]>=1.0.5",
    "rich>=14.2.0",
]
